--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         const sprueche = [
             "Du schaffst das!",
             "Mach einfach weiter!",
+            "Vertraue Dir selbst!",
+            "Ich glaube an Dich!",
+            "Ding dang dong!",
             "Jeder Tag ist eine neue Chance.",
             "Große Dinge brauchen Zeit.",
             "Sei stolz auf dich!",
